Fix: hero image on mobile.

--- a/assets/base.css
+++ b/assets/base.css
@@ -31,11 +31,7 @@ ul {
 #getmore-header::before {
   content: '';
 
-  background-image: -webkit-image-set(
-    url('assets/hero.jpg') 1x,
-    url('assets/hero@2x.jpg') 2x,
-    url('assets/hero@3x.jpg') 3x
-  );
+  background-image: -webkit-image-set(url('hero.jpg') 1x, url('hero@2x.jpg') 2x, url('hero@3x.jpg') 3x);
 
   background-size: cover;
   background-repeat: no-repeat;
